--- a/signup.html
+++ b/signup.html
@@ -1,61 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ToDo</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ToDo</title>
+    <!-- ---------------- estilos compartidos de login y signup ---------------- -->
+    <link rel="stylesheet" href="styles/ingreso.css" />
+  </head>
 
-  <!-- ---------------- estilos compartidos de login y signup ---------------- -->
-  <link rel="stylesheet" href="styles/ingreso.css">
-
-  <!-- ---------------------- logica aplicada en register -------------------- -->
-  <script src="/scripts/utils.js"></script>
-  <script src="/scripts/signup.js"></script>
-
-</head>
-
-<body>
-
-  <div class="left">
-    <img src="./assets/persona-signup.png" alt="">
-  </div>
-  <div class="right">
-    <form>
-      <div class="form-header">
-        <p>To-Do App</p>
-      </div>
-
-      <label>
-        Nombre:
-        <input type="text">
-      </label>
-      <label>
-        Apellido:
-        <input type="text">
-      </label>
-      <label>
-        Email:
-        <input type="text">
-      </label>
-      <label>
-        Contraseña:
-        <input type="password">
-      </label>
-      <label>
-        Repetir contraseña:
-        <input type="password">
-      </label>
-
-      <button>Crear Cuenta</button>
-
-    </form>
-    <div class="ingresarA">
-      <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
+  <body>
+    <div class="left">
+      <img src="./assets/persona-signup.png" alt="" />
     </div>
-  </div>
-
-</body>
-
+    <div class="right">
+      <form id="signup">
+        <div class="form-header">
+          <p>To-Do App</p>
+        </div>
+        <label>
+          Nombre:
+          <input type="text" id="signup-nombre" required autocomplete="off"/>
+        </label>
+        <label>
+          Apellido:
+          <input type="text" id="signup-apellido" required autocomplete="off" />
+        </label>
+        <label>
+          Email:
+          <input type="email" id="signup-email" required autocomplete="off" />
+        </label>
+        <label>
+          Contraseña:
+          <input type="password" id="signup-contrasenna" required autocomplete="off" />
+        </label>
+        <label>
+          Repetir contraseña:
+          <input type="password" id="signup-contrasenna-verificada" required autocomplete="off" />
+        </label>
+        <p id="singup-error"></p>
+        <button id="signup-boton">Crear Cuenta</button>
+      </form>
+      <div class="ingresarA">
+        <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
+      </div>
+    </div>
+    <!-- ---------------------- logica aplicada en register -------------------- -->
+    <script src="./scripts/api.js"></script>
+    <script src="./scripts/signup.js"></script>
+  </body>
 </html>
